# libxv

./: .gitlab-ci.yml  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  xv.pc.in
src/: Xv.c
